--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <h2 class="banner-text">your gateway to <br> alternative <br> investments.</h2>
                     <p class="banner-para">take control with all-in-one investment,retirement, <br> checking and more</p>
                     <!-- <button type="button" class="btn btn-lg mt-3 banner-btn text-white">GET STARTED</button> -->
-                    <div class="banner-btn">
+                    <div class="banner-btn mb-3">
                         <button type="button" class="button px-5 py-2 rounded-5">GET STARTED</button>
                     </div>
                 </div>
@@ -80,48 +80,166 @@
     <section class="our-feature">
         <div class="container">
             <div class="row">
-                <div class="feature-top mt-3">
-                    <div class="col-12">
-                        <h2>Our Feature</h2>
-                        <h3>we make investing and fundraising easy</h3>
-                        <h4>For Invester</h4>
+               <div class="feature-head">
+                    <h1 class="text-center fw-bold mt-3 "> Our Feature </h1>
+                    <p class="text-center fs-2">We Make Investing And Fundraising Easy</p>
+                    <h3>For Investor</h3>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-lg-4 col-md-6 col-11 m-auto">
+                    <div class="card my-4 border shadow-lg bg-white">
+                        <div class="feature-items mx-4 text-justify">
+                            <div class="icons">
+                                <i class="fas fa-chart-line"></i>
+                            </div>
+                            <h4>Access Highly Quality 'Sponsored' Startups </h4>
+                            <p>
+                                Our team works to origrate, curate and present disruptive and hyper growth ventures. 
+                            </p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-11"> <div class="col">
-                    <div class="card h-100">
-                      <img src="..." class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      </div>
+
+                <div class="col-lg-4 col-md-6 col-11 m-auto">
+                    <div class="card my-4 border shadow-lg bg-white">
+                        <div class="feature-items mx-5 text-justify">
+                            <div class="icons">
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <h4>Gain Access To A New Age Asset Class</h4>
+                            <p>
+                                Diversity wealth viz Sr, asset class fundamental'y different from conventional real estate  and preciouses. 
+                            </p>
+                        </div>
                     </div>
-                  </div></div>
-                <div class="col-lg-4 col-11">
-                    <div class="col">
-                        <div class="card h-100">
-                          <img src="..." class="card-img-top" alt="...">
-                          <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                          </div>
-                        </div>
-                      </div>
                 </div>
-                <div class="col-lg-4 col-11">
-                    <div class="col">
-                        <div class="card h-100">
-                          <img src="..." class="card-img-top" alt="...">
-                          <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                          </div>
+
+                <div class="col-lg-4 col-md-6 col-11 m-auto">
+                    <div class="card my-4 border shadow-lg bg-white">
+                        <div class="feature-items mx-5 text-justify">
+                            <div class="icons">
+                                <i class="fa-solid fa-file-lines"></i>
+                            </div>
+                            <h4>Attend E-Pitch Nights </h4>
+                            <p>Our platform anows you access to e'evatcr pitches directly from our founders.</p>
                         </div>
-                      </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <h3>For Founder</h3>
+            <div class="row text-center">
+
+                <div class="col-lg-4 col-md-6 col-11 m-auto">
+                    <div class="card my-4 border shadow-lg  rounded bg-white">
+                        <div class="feature-items mx-5 text-justify">
+                            <div class="icons">
+                                <i class="fas fa-laptop"></i>
+                            </div>
+                            <h4>Develop Well-Targeted Campaigns </h4>
+                            <p>Develop campaigns with the support of our partners to have a high impact e-roadshow.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-11 m-auto">
+                    <div class="card my-4 border shadow-lg bg-white">
+                        <div class="feature-items mx-5  text-justify">
+                            <div class="icons">
+                                <i class="fa-solid fa-chart-column"></i>
+                            </div>
+                            <h4>Connect With Investors Via "E-Roadshows" 
+                                 </h4>
+                            <p>Our realtime chat platform helps you connect with investors quickly and engage in meaningful discussions. 
+                                </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-11 m-auto">
+                    <div class="card my-4 border shadow-lg bg-white">
+                        <div class="feature-items mx-5 text-justify">
+                            <div class="icons">
+                                <i class="far fa-map"></i>
+                            </div>
+                            <h4>Track Your Funding </h4>
+                            <p>Our platform helps you track commitment(s) and complete paperwork.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- OUR FEATURE END  -->
+
+    <!-- ABOUT US  -->
+
+    <section class="about-us">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-11">
+                    <h1 class="display-5 mt-4 mb-3">A Few Words About Us</h1>
+                    <p class="aboutus-p">Seedkaro aims to act as a bridge that connects high quality founders
+                        with a previously untapped but extremely knowledgeable investor
+                        base.</p>
+                    <p class="aboutus-p">With first hand experience, we have often noticed that founders who
+                        lack backing of a corporate sponsor or those who do not belong to an
+                        alumini network of an A-grade B-school often find it frustrating to
+                        gain access to equity funding. In similar vier, individual investors who
+                        have access to capital as well as experience to provide mentorship,
+                        are often not easily provided access to private equity as an asset class.</p>
+                    <p class="aboutus-p">At seedkaro, our vision is to bridge this gap and connect passionate,
+                        top quality and credible founders with traditional but experienced and
+                        "Unbanked" investors. We are fully aware of the time consuming
+                        nature of the fund raising process and aim to provide seedkaro as a
+                        unified integrated platform to manage the entire fund raising process
+                        in a safe, secure and seamless manner.</p>
+                        <div class="banner-btn mb-3">
+                            <button type="button" class="button px-5 py-2 rounded-5">GET STARTED</button>
+                        </div>
+                </div>
+                <div class="col-lg-6 col-11">
+                    <img src="images/aboutus.png" alt="about-us" class="img-fluid mt-5 mb-5">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ABOUT US END  -->
+
+    <!-- STOCKS  -->
+
+    <section class="stocks">
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col-lg-7 col-md-12">
+                    <img src="images/mobile2.png" alt="mobile" class="img-fluid" width="500px">
+                </div>
+                <div class="col-lg-5 col-md-12 text-center stock-text">
+                        <div class="section">
+                        <h1>Earn Found Money</h1>
+                        <p>Earn bonus investments when you shop with 350+ top <br>
+                        brands.</p>
+                        <div class="banner-btn mb-3">
+                            <button type="button" class="button px-5 py-2 rounded-5">GET STARTED</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- STOCKS END  -->
+ 
+    
+
+
+
+
+    <script src="https://kit.fontawesome.com/899b989fe2.js" crossorigin="anonymous"></script>
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
