signup section complete

--- a/index.html
+++ b/index.html
@@ -233,7 +233,61 @@
     </section>
 
     <!-- STOCKS END  -->
+
+    <!-- TESTIMONIALS -->
+
+    <section class="testimonials">
+        <div class="container testimonial-data">
+            <div class="row justify-content-center">
+                <h1 class="text-center mt-4 mb-3">What Our Clients Say</h1>
+                <div class="col-lg-5">
+                    <div class="card shadow-lg m-2">
+                        <p class="p-4" >
+                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a erat sit amet augue aliquet rutrum. Proin maximus purus purus, eu porta lorem imperdiet ultrices. Integer non nisl at leo sagittis tincidunt vel non odio. Nam luctus nisl commodo cursus cursus. Duis quis lobortis urna, a ultricies."
+                        </p>
+                    </div>
+                    <div class="client-img">
+                        <img src="images/testiprofile1.jpg" alt="client" class="img-fluid rounded-circle mt-3">
+                        <div class="client-details">
+                            <h4>Williamson</h4>
+                            <small>Web Developer</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-5">
+                    <div class="card shadow-lg m-2">
+                        <p class="p-4" >
+                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a erat sit amet augue aliquet rutrum. Proin maximus purus purus, eu porta lorem imperdiet ultrices. Integer non nisl at leo sagittis tincidunt vel non odio. Nam luctus nisl commodo cursus cursus. Duis quis lobortis urna, a ultricies."
+                        </p>
+                    </div>
+                    <div class="client-img">
+                        <img src="images/testiprofile2.jpg" alt="client" class="img-fluid rounded-circle mt-3">
+                        <div class="client-details mb-4">
+                            <h4>Williamson</h4>
+                            <small>Web Developer</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
  
+    <!-- TESTIMONIALS END  -->
+
+    <!-- SIGN UP -->
+
+    <section class="sign-up">
+        <div class="container">
+            <div class="row py-5 justify-content-center">
+                <div class="col-lg-8 signup-text">
+                    <h2>take your first step towards your financial success</h2>
+                </div>
+                <div class="col-lg-3 signup-btn mt-4 px-5">
+                        <button type="button" class="btn bg-white s-btn">SIGN UP NOW</button>
+                </div>
+            </div>
+        </div>
+    </section>
     
 
 
