--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <section class="header">
         <div class="menu-bar">
-            <nav class="navbar navbar-expand-lg">
+            <nav class="navbar navbar-expand-lg m-2">
                 <div class="container">
                 <a class="navbar-brand" href="#"><img src="images/logo.png" alt="logo" height="50px"></a>
                 <button class="navbar-toggler pr-md-5" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -80,14 +80,16 @@
     <section class="our-feature">
         <div class="container">
             <div class="row">
-               <div class="feature-head">
-                    <h1 class="text-center fw-bold mt-3 "> Our Feature </h1>
-                    <p class="text-center fs-2">We Make Investing And Fundraising Easy</p>
-                    <h3>For Investor</h3>
+                <div class="col-lg-12 col-11">
+                    <div class="feature-head">
+                        <h1 class="text-center fw-bold mt-3"> Our Feature </h1>
+                        <p class="text-center fs-2">We Make Investing And Fundraising Easy</p>
+                        <h3>For Investor</h3>
+                    </div>
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-lg-4 col-md-6 col-11 m-auto">
+                <div class="col-lg-4 col-md-6 col-10 m-auto">
                     <div class="card my-4 border shadow-lg bg-white">
                         <div class="feature-items mx-4 text-justify">
                             <div class="icons">
@@ -101,7 +103,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 col-11 m-auto">
+                <div class="col-lg-4 col-md-6 col-10 m-auto">
                     <div class="card my-4 border shadow-lg bg-white">
                         <div class="feature-items mx-5 text-justify">
                             <div class="icons">
@@ -115,7 +117,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 col-11 m-auto">
+                <div class="col-lg-4 col-md-6 col-10 m-auto">
                     <div class="card my-4 border shadow-lg bg-white">
                         <div class="feature-items mx-5 text-justify">
                             <div class="icons">
@@ -133,7 +135,7 @@
             <h3>For Founder</h3>
             <div class="row text-center">
 
-                <div class="col-lg-4 col-md-6 col-11 m-auto">
+                <div class="col-lg-4 col-md-6 col-10 m-auto">
                     <div class="card my-4 border shadow-lg  rounded bg-white">
                         <div class="feature-items mx-5 text-justify">
                             <div class="icons">
@@ -145,7 +147,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 col-11 m-auto">
+                <div class="col-lg-4 col-md-6 col-10 m-auto">
                     <div class="card my-4 border shadow-lg bg-white">
                         <div class="feature-items mx-5  text-justify">
                             <div class="icons">
@@ -159,7 +161,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 col-11 m-auto">
+                <div class="col-lg-4 col-md-6 col-10 m-auto">
                     <div class="card my-4 border shadow-lg bg-white">
                         <div class="feature-items mx-5 text-justify">
                             <div class="icons">
@@ -240,7 +242,7 @@
         <div class="container testimonial-data">
             <div class="row justify-content-center">
                 <h1 class="text-center mt-4 mb-3">What Our Clients Say</h1>
-                <div class="col-lg-5">
+                <div class="col-lg-5 col-11">
                     <div class="card shadow-lg m-2">
                         <p class="p-4" >
                             "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a erat sit amet augue aliquet rutrum. Proin maximus purus purus, eu porta lorem imperdiet ultrices. Integer non nisl at leo sagittis tincidunt vel non odio. Nam luctus nisl commodo cursus cursus. Duis quis lobortis urna, a ultricies."
@@ -254,7 +256,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-5">
+                <div class="col-lg-5 col-11">
                     <div class="card shadow-lg m-2">
                         <p class="p-4" >
                             "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a erat sit amet augue aliquet rutrum. Proin maximus purus purus, eu porta lorem imperdiet ultrices. Integer non nisl at leo sagittis tincidunt vel non odio. Nam luctus nisl commodo cursus cursus. Duis quis lobortis urna, a ultricies."
@@ -278,17 +280,58 @@
 
     <section class="sign-up">
         <div class="container">
-            <div class="row py-5 justify-content-center">
-                <div class="col-lg-8 signup-text">
+            <div class="row py-5">
+                <div class="col-lg-8 col-11 signup-text d-flex">
                     <h2>take your first step towards your financial success</h2>
                 </div>
-                <div class="col-lg-3 signup-btn mt-4 px-5">
-                        <button type="button" class="btn bg-white s-btn">SIGN UP NOW</button>
+                <div class="col-lg-4 col-11 signup-btn mt-4 px-5 d-flex justify-content-around align-items-center">
+                        <!-- <a href="signup.html"><button type="button" class="s-btn rounded-4">SIGN UP NOW</button></a> -->
+                        <a class="sign-up-btn rounded-4" href="signup.html">SIGN UP NOW</a>
                 </div>
             </div>
         </div>
     </section>
     
+    <!-- TERMS AND CONDITION  -->
+
+    <section class="terms">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-11 col-11 text-justify my-5">
+                    <P class="pb-3">Investing involves risks, including loss of capital, illiquidity, lack of dividends and dilution, and should be done only as part of a diversified portfolio. Please read the risk warnings before investing. Investments should only be made by investors who understand these risks. Tax treatment depends on individual circumstances and is subject to change in future.</P>
+                    <P class="pb-3"> This platform is not intended to be a promotion of any individual investment opportunity and is not an offer to the public. The summary information provided about investment opportunities on this webpage is intended solely to demonstrate the types of investments available on the seedkaro platform, and any investment decision should be made on the basis of the full investment memo. Full campaigns are available to investors who have become authorised to invest on the platform.</P>
+                    <P class="pb-3">Seedkaro does not make investment recommendations to you. No communications from us, through this website or any other medium, should be construed as an investment recommendation. Further, nothing on this website shall be considered an offer to sell, or a solicitation of an offer to buy, any security to any person in any jurisdiction to whom or in which such offer, solicitation or sale is unlawful. We does not provide legal, financial or tax advice of any kind. If you have any questions with respect to legal, financial or tax matters relevant to your interactions with us, you should consult a professional adviser.</P>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- TERMS AND CONDITION END  -->
+
+    <!-- FOOTER  -->
+
+    <section class="footer">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-8 col-11">
+                    <div class="copy-r">
+                        <p>&copy; 2020 - all rights reserved,seedkaro.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-11">
+                    <div class="social-icons">
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-youtube"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-solid fa-phone"></i>
+                        <i class="fa-solid fa-envelope"></i>
+                        <i class="fa-solid fa-circle-chevron-up"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
