--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                         MY ACCOUNT
                         </a>
                         <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">LOG IN</a></li>
-                        <li><a class="dropdown-item" href="#">SIGN UP</a></li>
+                        <li><a class="dropdown-item" href="login.html">LOG IN</a></li>
+                        <li><a class="dropdown-item" href="signup.html">SIGN UP</a></li>
                         </ul>
                     </li>
                     </ul>
@@ -333,11 +333,23 @@
         </div>
     </section>
 
+    <!-- FOOTER END  -->
+
+    <!-- SIGN UP  -->
+
+    <!-- <section class="signup-page">
+        <div class="container">
+            <div class="row">
+                div.col-lg
+            </div>
+        </div>
+    </section> -->
+
 
 
 
     <script src="https://kit.fontawesome.com/899b989fe2.js" crossorigin="anonymous"></script>
     <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
