--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link rel="stylesheet" href="style.css"> -->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>SeedKaro</title>
 </head>
 <body>
@@ -222,35 +225,52 @@
     <!-- STOCKS END  -->
 
     <!-- TESTIMONIALS -->
-    <section class="testimonials">
+    <section class="testimonials bg-light">
         <div class="container testimonial-data">
             <div class="row justify-content-center">
                 <h1 class="text-center mt-4 mb-3">What Our Clients Say</h1>
-                <div class="col-lg-5 col-11">
-                    <div class="card shadow-lg m-2">
-                        <p class="p-4" >
-                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a erat sit amet augue aliquet rutrum. Proin maximus purus purus, eu porta lorem imperdiet ultrices. Integer non nisl at leo sagittis tincidunt vel non odio. Nam luctus nisl commodo cursus cursus. Duis quis lobortis urna, a ultricies."
-                        </p>
-                    </div>
-                    <div class="client-img">
-                        <img src="images/testiprofile1.jpg" alt="client" class="img-fluid rounded-circle mt-3">
-                        <div class="client-details">
-                            <h4>Williamson</h4>
-                            <small>Web Developer</small>
+
+                <div class="client-carousel owl-carousel">
+                    <div class="col-lg-12 col-11">
+                        <div class="card shadow-lg m-2">
+                            <p class="p-4" >
+                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a erat sit amet augue aliquet rutrum. Proin maximus purus purus, eu porta lorem imperdiet ultrices. Integer non nisl at leo sagittis tincidunt vel non odio. Nam luctus nisl commodo cursus cursus. Duis quis lobortis urna, a ultricies."
+                            </p>
+                        </div>
+                        <div class="client-img">
+                            <img src="images/testiprofile1.jpg" alt="client" class="img-fluid rounded-circle mt-3" style="width: 90px;">
+                            <div class="client-details">
+                                <h4>Williamson</h4>
+                                <small>Web Developer</small>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-5 col-11">
-                    <div class="card shadow-lg m-2">
-                        <p class="p-4" >
-                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a erat sit amet augue aliquet rutrum. Proin maximus purus purus, eu porta lorem imperdiet ultrices. Integer non nisl at leo sagittis tincidunt vel non odio. Nam luctus nisl commodo cursus cursus. Duis quis lobortis urna, a ultricies."
-                        </p>
+                    <div class="col-lg-12 col-11">
+                        <div class="card shadow-lg m-2">
+                            <p class="p-4" >
+                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a erat sit amet augue aliquet rutrum. Proin maximus purus purus, eu porta lorem imperdiet ultrices. Integer non nisl at leo sagittis tincidunt vel non odio. Nam luctus nisl commodo cursus cursus. Duis quis lobortis urna, a ultricies."
+                            </p>
+                        </div>
+                        <div class="client-img">
+                            <img src="images/testiprofile2.jpg" alt="client" class="img-fluid rounded-circle mt-3" style="width: 90px;">
+                            <div class="client-details mb-4">
+                                <h4>Williamson</h4>
+                                <small>Web Developer</small>
+                            </div>
+                        </div>
                     </div>
-                    <div class="client-img">
-                        <img src="images/testiprofile2.jpg" alt="client" class="img-fluid rounded-circle mt-3">
-                        <div class="client-details mb-4">
-                            <h4>Williamson</h4>
-                            <small>Web Developer</small>
+                    <div class="col-lg-12 col-11">
+                        <div class="card shadow-lg m-2">
+                            <p class="p-4" >
+                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a erat sit amet augue aliquet rutrum. Proin maximus purus purus, eu porta lorem imperdiet ultrices. Integer non nisl at leo sagittis tincidunt vel non odio. Nam luctus nisl commodo cursus cursus. Duis quis lobortis urna, a ultricies."
+                            </p>
+                        </div>
+                        <div class="client-img">
+                            <img src="images/testiprofile3.jpg" alt="client" class="img-fluid rounded-circle mt-3" style="width: 90px;">
+                            <div class="client-details">
+                                <h4>Williamson</h4>
+                                <small>Web Developer</small>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -316,6 +336,32 @@
 
     <script src="https://kit.fontawesome.com/899b989fe2.js" crossorigin="anonymous"></script>
     <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script>
+        $('.client-carousel').owlCarousel({
+            loop:true,
+            nav:false,
+            margin:20,
+            responsive: {
+                0:{
+                    items: 1
+                },
+                768:{
+                    items: 2
+                },
+                991:{
+                    items: 2
+                },
+                1200:{
+                    items: 2
+                },
+                1920:{
+                    items: 2
+                }
+            }
+        });
+    </script>
 </body>
 </html>
