--- a/index.html
+++ b/index.html
@@ -233,12 +233,12 @@
                 <div class="client-carousel owl-carousel">
                     <div class="col-lg-12 col-11">
                         <div class="card shadow-lg m-2">
-                            <p class="p-4" >
+                            <p class="p-4">
                                 "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a erat sit amet augue aliquet rutrum. Proin maximus purus purus, eu porta lorem imperdiet ultrices. Integer non nisl at leo sagittis tincidunt vel non odio. Nam luctus nisl commodo cursus cursus. Duis quis lobortis urna, a ultricies."
                             </p>
                         </div>
                         <div class="client-img">
-                            <img src="images/testiprofile1.jpg" alt="client" class="img-fluid rounded-circle mt-3" style="width: 90px;">
+                            <img src="images/testiprofile1.jpg" alt="client" class="img-fluid rounded-circle mt-3" style="width: 65px;">
                             <div class="client-details">
                                 <h4>Williamson</h4>
                                 <small>Web Developer</small>
@@ -252,7 +252,7 @@
                             </p>
                         </div>
                         <div class="client-img">
-                            <img src="images/testiprofile2.jpg" alt="client" class="img-fluid rounded-circle mt-3" style="width: 90px;">
+                            <img src="images/testiprofile2.jpg" alt="client" class="img-fluid rounded-circle mt-3" style="width: 65px;">
                             <div class="client-details mb-4">
                                 <h4>Williamson</h4>
                                 <small>Web Developer</small>
@@ -266,7 +266,7 @@
                             </p>
                         </div>
                         <div class="client-img">
-                            <img src="images/testiprofile3.jpg" alt="client" class="img-fluid rounded-circle mt-3" style="width: 90px;">
+                            <img src="images/testiprofile3.jpg" alt="client" class="img-fluid rounded-circle mt-3" style="width: 65px;">
                             <div class="client-details">
                                 <h4>Williamson</h4>
                                 <small>Web Developer</small>
@@ -298,7 +298,7 @@
     <section class="terms">
         <div class="container">
             <div class="row">
-                <div class="col-lg-11 col-11 text-justify my-5">
+                <div class="col-lg-12 col-12 text-justify my-5">
                     <P class="pb-3">Investing involves risks, including loss of capital, illiquidity, lack of dividends and dilution, and should be done only as part of a diversified portfolio. Please read the risk warnings before investing. Investments should only be made by investors who understand these risks. Tax treatment depends on individual circumstances and is subject to change in future.</P>
                     <P class="pb-3"> This platform is not intended to be a promotion of any individual investment opportunity and is not an offer to the public. The summary information provided about investment opportunities on this webpage is intended solely to demonstrate the types of investments available on the seedkaro platform, and any investment decision should be made on the basis of the full investment memo. Full campaigns are available to investors who have become authorised to invest on the platform.</P>
                     <P class="pb-3">Seedkaro does not make investment recommendations to you. No communications from us, through this website or any other medium, should be construed as an investment recommendation. Further, nothing on this website shall be considered an offer to sell, or a solicitation of an offer to buy, any security to any person in any jurisdiction to whom or in which such offer, solicitation or sale is unlawful. We does not provide legal, financial or tax advice of any kind. If you have any questions with respect to legal, financial or tax matters relevant to your interactions with us, you should consult a professional adviser.</P>
@@ -318,7 +318,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-11">
-                    <div class="social-icons">
+                    <div class="social-icons mt-3">
                         <i class="fa-brands fa-facebook-f"></i>
                         <i class="fa-brands fa-twitter"></i>
                         <i class="fa-brands fa-youtube"></i>
@@ -341,27 +341,22 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
         $('.client-carousel').owlCarousel({
-            loop:true,
-            nav:false,
-            margin:20,
-            responsive: {
-                0:{
-                    items: 1
-                },
-                768:{
-                    items: 2
-                },
-                991:{
-                    items: 2
-                },
-                1200:{
-                    items: 2
-                },
-                1920:{
-                    items: 2
-                }
+        loop:true,
+        nav:false,
+        margin:20,
+        dots:true,
+        responsive:{
+            0:{
+                items:1
+            },
+            600:{
+                items:1
+            },
+            1000:{
+                items:2
             }
-        });
+        }
+    })
     </script>
 </body>
 </html>
